--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,12 +23,12 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
                 <a class="logo" href="#"><img src="./../imgs/red_wine.jpg" alt="red wine"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler menu-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon menu-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse menu text-center" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link " aria-current="page" href="./../index.html">INICIO</a>
