--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ background-size: cover;
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
                 <a class="logo" href="#"><img src="./imgs/red_wine.jpg" alt="red wine"></a>
-                <button class="navbar-toggler menu-button" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler menu-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon menu-icon"></span>
