--- a/pages/reserva_tu_mesa.html
+++ b/pages/reserva_tu_mesa.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
                 <a class="logo" href="#"></a>
-                <button class="navbar-toggler menu-button" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler menu-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon menu-icon"></span>
