--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             <h1 class="h1"><span class="red-text">RED</span> <span class="white-text">WINE</span></h1>
             <div class="momentos">
                 <h3>¡COMPARTÍ BUENOS MOMENTOS!</h3>
-                <!-- <h4>DISFRUTA JUNTO A NOSOTROS UNA DE LAS MEJORES GASTRONOMIAS QUE OFRECE NUESTRO PAIS</h4> -->
             </div>
 
             <article class="content-home">
@@ -86,7 +85,14 @@
                     </a>
                 </div>
             </article>
-            <!-- <h3>TE DEJAMOS NUESTRA UBICACION PARA CUANDO DESEES VENIR</h3> -->
+            <div class="momentos_2">
+            <h3 class="ubi">¡NUESTRA UBICACION PARA QUE GOCES NUESTRA GASTRONOMIA!</h3>
+            </div>
+            <div class="maps">
+                <div class="mapa-container">
+                    <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13528.5942775454!2d-63.573308!3d-32.0381698!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cce1f96a9d71c3%3A0x5198fd7244eac753!2sRed%20Wine!5e0!3m2!1ses-419!2sar!4v1708525238659!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </section>
     </main>
 
