--- a/pages/desayunos_y_meriendas.html
+++ b/pages/desayunos_y_meriendas.html
@@ -55,7 +55,7 @@
 
     <main class="main_des">
         <section>
-            <h1>¡VENÍ Y DEGUSTAMOS LOS MEJORES DESAYUNOS Y MERIENDAS!</h1>
+            <h1 class="font_des">¡VENÍ Y DEGUSTAMOS LOS MEJORES DESAYUNOS Y MERIENDAS!</h1>
             <div class="wrap-title-section">
                 <h2>DESAYUNO COMPLETO</h2>
             </div>
