--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
                     </a>
                 </div>
             </article>
+            <div class="contain_horarios">
+                <div class="hijo1_horarios">
+                <h4 class="hijo2_horarios"> 
+                    NUESTROS HORARIOS PARA QUE NOS VISITES:
+                    <h5 class="horarios">¡Lunes a Jueves abierto de 7:30pm a 00:00 am!</h5>
+                    <h5 class="horarios">¡Viernes a Domingo abierto de 8:00pm a 4am!</h5>
+                </h4>
+                </div>
+            </div>
         </section>
     </main>
 
